--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "lts/*"
           registry-url: "https://registry.npmjs.org"
       - name: npm cache
         uses: actions/cache@v4
@@ -84,7 +84,7 @@ jobs:
       ########################################
       - uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "lts/*"
           registry-url: "https://npm.pkg.github.com"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
