--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,18 @@ jobs:
         with:
           node-version: "lts/*"
           registry-url: "https://registry.npmjs.org"
+      - run: node --version
+      - run: npm --version
+      ########################################
       - name: npm cache
         uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+      ########################################
+      - run: npm install -g npm@latest
+      - run: npm --version
+      ########################################
       - name: Set up Git user
         run: |
           git config user.name "${{ github.actor }}"
