chore: Fix npm sbom script to create dist directory before generating SPDX file

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "bump": "export VERSION=$(date +'%Y.%m.%d-%H%M%S') && npm version $VERSION --no-git-tag-version",
     "postinstall": "npm run sbom",
     "prepare": "npm run build && chmod +x ./dist/src/index.js",
-    "sbom": "npm sbom --sbom-format spdx > dist/sbom.spdx.json",
+    "sbom": "mkdir dist ; npm sbom --sbom-format spdx > dist/sbom.spdx.json",
     "start": "tsx --no-cache ./src/index.js"
   },
   "type": "module",
